added shuffle data between learning iterations